{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 9,
  "lineage": "569d40b5-ef93-f409-9aa4-0591622aba6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "KTWSTP_webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08baf9e3c347b7092",
            "arn": "arn:aws:ec2:eu-north-1:472570941384:instance/i-06a0f875dc3cac29f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a0f875dc3cac29f",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "KTWSTP_EC2_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-097347129901d0fe7",
            "private_dns": "ip-10-0-0-9.eu-north-1.compute.internal",
            "private_ip": "10.0.0.9",
            "public_dns": "ec2-13-53-182-183.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.182.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05d2c6262935c6af8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bd40db24bff8929",
            "tags": {
              "Name": "KTWSTP_server_instance",
              "Project": "KTWSTP"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f67c5095423de84c"
            ]
          },
          "dependencies": [
            "aws_security_group.KTWSTP_sg",
            "aws_subnet.KTWSTP_subnet",
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "KTWSTP_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:472570941384:internet-gateway/igw-08c2e817526b412bf",
            "id": "igw-08c2e817526b412bf",
            "owner_id": "472570941384",
            "tags": {
              "Name": "KTWSTP_ig",
              "Project": "KTWSTP"
            },
            "vpc_id": "vpc-0717f87a6b4994c30"
          },
          "dependencies": [
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "KTWSTP_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c2e817526b412bf",
            "id": "r-rtb-0b89660fb32a04b541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b89660fb32a04b54",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.KTWSTP_ig",
            "aws_route_table.KTWSTP_route_table",
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "KTWSTP_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b89660fb32a04b54",
            "owner_id": "472570941384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "KTWSTP_route_table",
              "Project": "KTWSTP"
            },
            "vpc_id": "vpc-0717f87a6b4994c30"
          },
          "dependencies": [
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "KTWSTP_rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fd9620ceb0643de",
            "route_table_id": "rtb-0b89660fb32a04b54",
            "subnet_id": "subnet-00bd40db24bff8929"
          },
          "dependencies": [
            "aws_route_table.KTWSTP_route_table",
            "aws_subnet.KTWSTP_subnet",
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "KTWSTP_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:472570941384:security-group/sg-0f67c5095423de84c",
            "description": "For the KTWSTP Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f67c5095423de84c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "KTWSTP_sg",
            "name_prefix": "",
            "owner_id": "472570941384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "KTWSTP_sg",
              "Project": "KTWSTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0717f87a6b4994c30"
          },
          "dependencies": [
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "KTWSTP_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:472570941384:subnet/subnet-00bd40db24bff8929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00bd40db24bff8929",
            "map_public_ip_on_launch": true,
            "owner_id": "472570941384",
            "tags": {
              "Name": "KTWSTP_subnet",
              "Project": "KTWSTP"
            },
            "vpc_id": "vpc-0717f87a6b4994c30"
          },
          "dependencies": [
            "aws_vpc.KTWSTP_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "KTWSTP_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:472570941384:vpc/vpc-0717f87a6b4994c30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed755443eb687f9a",
            "default_route_table_id": "rtb-0d31294cb8e877201",
            "default_security_group_id": "sg-04a78fc0076b0d04d",
            "dhcp_options_id": "dopt-6438f00d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0717f87a6b4994c30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d31294cb8e877201",
            "owner_id": "472570941384",
            "tags": {
              "Name": "KTWSTP_vpc",
              "Project": "KTWSTP"
            }
          }
        }
      ]
    }
  ]
}